<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.AddContactFragment"
    android:background="@color/backgroud_activity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/default_margin">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nombre_epleado"
            app:helperText="@string/helper_requerido"
            app:endIconMode="clear_text"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:counterMaxLength="@integer/counter_max_name"
            app:counterEnabled="true"
            app:startIconDrawable="@drawable/ic_person">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etNombreEmpleado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="@integer/counter_max_name"
                android:inputType="textPersonName"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilNumero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/numero_empleado"
            app:helperText="@string/helper_requerido"
            app:endIconMode="clear_text"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:counterMaxLength="@integer/counter_max_id"
            app:counterEnabled="true"
            app:startIconDrawable="@drawable/ic_perm_identity">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etNumeroEmpleado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="@integer/counter_max_id"
                android:inputType="number"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tiltelefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/telefono_empleado"
            app:helperText="@string/helper_requerido"
            app:endIconMode="clear_text"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:counterMaxLength="@integer/counter_max_phone"
            app:counterEnabled="true"
            app:startIconDrawable="@drawable/ic_phone">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etTelefonoEmpleado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="@integer/counter_max_phone"
                android:inputType="phone"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilemail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_empleado"
            app:helperText="@string/helper_requerido"
            app:endIconMode="clear_text"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:counterMaxLength="@integer/counter_max_email"
            app:counterEnabled="true"
            app:startIconDrawable="@drawable/ic_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmailEmpleado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="@integer/counter_max_email"
                android:inputType="textEmailAddress"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tildireccion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/direccion_empleado"
            app:helperText="@string/helper_requerido"
            app:endIconMode="clear_text"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:counterMaxLength="@integer/counter_max_email"
            app:counterEnabled="true"
            app:startIconDrawable="@drawable/ic_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etDireccionEmpleado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="@integer/counter_max_direccion"
                android:inputType="textEmailAddress"/>
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/default_margin"
            android:gravity="center"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/imgEmpleado"
                android:src="@drawable/ic_insert_photo"
                android:contentDescription="@string/ingrese_una_foto"
                android:layout_width="@dimen/photo_load_size"
                android:layout_height="@dimen/photo_load_size"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/seleccione_para_insertar_imagen"/>
        </LinearLayout>
    </LinearLayout>

</androidx.core.widget.NestedScrollView>