<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.FotografiaFragment"
    android:background="@color/backgroud_activity">


    <TextView
        android:id="@+id/tvAccion"
        android:text="@string/seleccione_una_imagen_para_subir_a_firebase"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
        android:textSize="24sp"
        android:textColor="@color/text_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="@dimen/default_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <ImageView
        android:id="@+id/imgFirebase"
        android:layout_width="@dimen/photo_load_size_max"
        android:layout_height="@dimen/photo_load_size_max"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvAccion"
        android:src="@drawable/ic_insert_photo"/>

    <Button
        android:id="@+id/btnselectImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgFirebase"
        android:layout_margin="@dimen/default_margin"
        android:text="@string/seleccione_imagen"
        android:textColor="@color/text_color"/>
    <Button
        android:id="@+id/btnsubirImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnselectImage"
        android:layout_margin="@dimen/default_margin"
        android:text="@string/subir_imagen"
        android:textColor="@color/text_color"/>

</androidx.constraintlayout.widget.ConstraintLayout>